--- a/stilus.css
+++ b/stilus.css
@@ -1,6 +1,31 @@
 header, main, article, nav, footer {
-    border: 1px solid black;
     padding: 10px;
+}
+main{
+    height: 100vh;
+    background-color: lightblue;
+}
+
+footer {
+    text-align: center;
+}
+
+header {
+    background-image: url("kepek/header.jpg");
+    height: 100px;
+}
+
+section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+    padding: 100px;
+}
+
+img {
+    width: 200px;
 }
 
 nav a {
@@ -8,6 +33,8 @@ nav a {
     display: inline-block;
     padding: 50px;
     font-family: "Lucida Console",monospace;
+    font-size: 30px;
+    color: white;
 }
 
 nav ul {
@@ -25,5 +52,5 @@ nav ul {
 }
 
 nav {
-    background-color: aqua;
+    background-color: #464b59;
 }
